my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EREGISZ/EREGISZ.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EREGISZ.dml:11:5: error EREGISZ: illegal register size for 'b.r'
